Fixed delete button positioning and clipping issue in mobile screens.

--- a/src/features/urlShortener/URLInput.css
+++ b/src/features/urlShortener/URLInput.css
@@ -45,5 +45,7 @@ input {
 }
 
 @media only screen and (max-width: 390px) {
-  /*  */
+  .input-container input {
+    font-size: 14px;
+  }
 }
